fixed layout issue

--- a/src/app/pages/feedback/feedback.component.css
+++ b/src/app/pages/feedback/feedback.component.css
@@ -9,12 +9,14 @@
     line-height: 50px;
   }
   .feedback-card {
-    padding-top:5px;
+    display:flex;
+    top:5px;
    /*  max-width: 400px; */
     width:100%;
     margin-bottom: 50px;
     max-width: 700px;
     text-align: left;
+    flex-direction: column;
   }
   .example-h2 {
     margin: 10px;
@@ -46,12 +48,8 @@
     background-color: #00ceff;
 }
 textarea{
-    width:100%;
-    height:150px;
-    border: 2px solid gray;
+    width:calc(100% - 10px);
+    height:40vh;
+    border: 2px solid #cccccc;
 }
-.mat-button-toggle {
-    white-space: nowrap;
-    position: relative;
-   
-}
+
