--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* Master Styles */
-@import '../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
 @import "~mapbox-gl/dist/mapbox-gl.css";
 @import "~@mapbox/mapbox-gl-geocoder/lib/mapbox-gl-geocoder.css";
 body {
@@ -19,7 +19,25 @@ body {
 .btn-color{
   background-color: #0b62c5;
 }
-.mat-button-toggle-label-content {
- 
-  width: 80%;
+.mat-button-toggle-label {
+  display: flex;
+  width: 100%;
+  text-align: center;
+
 }
+.mat-button-toggle-label-content {
+  display: flex;
+  width: 100%;
+  text-align: center;
+
+}
+.gap{
+  margin-top:20px;
+}
+.gap10{
+  margin-top:10px;
+}
+.gap50{
+  margin-top:50px;
+}
+
